# depin-supply-chain

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: ci.yml
ai_module/: app.py  requirements.txt  test_app.py
backend/: Cargo.toml  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts  main.rs
backend/src/__tests__/: index.test.ts
docs/: arquitectura_tecnica.md
mobile_app/: pubspec.yaml
mobile_app/lib/: main.dart
starknet_contracts/: Scarb.toml
starknet_contracts/src/: depin_supply_chain.cairo
