[package]
name = "depin_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
dotenv = "0.15"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
